used older API to be compatible with j8